[package]
name = "gossip-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "1.2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
toml = "0.8.22"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
