[package]
name = "gossip-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "1.2.0"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", features = ["http-listener"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3.41"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
toml = "0.8.22"
uuid = { version = "1", features = ["v4"] }
